[gd_scene load_steps=3 format=3 uid="uid://d1h136wrd67xo"]

[ext_resource type="Script" path="res://src/ui/options_menu/appearance_menu/appearance_menu_manager.gd" id="1_553jh"]
[ext_resource type="Theme" uid="uid://bi5sl1kglohpl" path="res://assets/themes/light_blue_theme.tres" id="1_ynj2t"]

[node name="AppearanceMenu" type="CanvasLayer"]
script = ExtResource("1_553jh")

[node name="FullWindow" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundPanel" type="Panel" parent="FullWindow"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.185
anchor_top = 0.3
anchor_right = 0.815
anchor_bottom = 0.633
theme = ExtResource("1_ynj2t")

[node name="TitleLabel" type="Label" parent="FullWindow/BackgroundPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.25
theme_override_font_sizes/font_size = 50
text = "Appearance"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="FullWindow/BackgroundPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.3
anchor_right = 0.95
anchor_bottom = 0.95

[node name="ThemeLabel" type="Label" parent="FullWindow/BackgroundPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Theme:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ThemesOptionButton" type="OptionButton" parent="FullWindow/BackgroundPanel/VBoxContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
text_overrun_behavior = 3
fit_to_longest_item = false

[node name="CloseMenuButton" type="Button" parent="FullWindow/BackgroundPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.84
anchor_right = 0.95
anchor_bottom = 0.95
text = "Close"
